--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-lazy": "^1.1.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2"
