--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "sweetalert2": "^8.17.6"
   },
   "scripts": {
     "start": "react-scripts start",
